# Switchkeys

./: .gitignore  Makefile  README.md  package.json
backend/: pyproject.toml  settings.py  urls.py
backend/components/: __init__.py
backend/switchkey/: apps.py
backend/switchkey/admin/: admin.py
backend/switchkey/api/: permissions.py
backend/switchkey/migrations/: 0001_initial.py  0002_projectenvironment_projectenvironmentfeaturestorage_and_more.py  0003_alter_organizationproject_team.py  0004_alter_organization_projects.py  0005_alter_organization_members.py  0006_alter_organizationproject_environments_and_more.py  0007_alter_organizationproject_team.py  0008_remove_organizationproject_environments_and_more.py  0009_remove_organization_projects_and_more.py  0010_remove_projectenvironment_default_features_and_more.py  0011_projectenvironmentfeaturestorage_is_default.py  0012_rename_projectenvironmentfeaturestorage_featurestorage.py  0013_alter_featurestorage_options_and_more.py  0014_alter_organizationgroup_project.py  0015_rename_created_at_featurestorage_created_and_more.py  0016_organization_owner.py  0017_rename_organizationgroup_organizationprojectgroup.py  0018_remove_organizationprojectgroup_project_and_more.py  0019_alter_organizationprojectgroup_options_and_more.py  0020_alter_organization_unique_together.py  0021_alter_organization_name_and_more.py  0022_rename_featurestorage_environmentfeature.py  0023_alter_environmentfeature_options.py  0024_alter_user_user_type.py  0025_alter_user_user_type.py
backend/switchkey/models/: __init__.py  management.py  storage.py  users.py
backend/switchkey/routes/: auth.py  users.py
backend/switchkey/serializers/: auth.py  environments.py  groups.py  organizations.py  projects.py  storage.py  users.py
backend/switchkey/services/: environments.py  groups.py  management.py  organizations.py  projects.py  storage.py  users.py
backend/switchkey/urls/: auth.py  environments.py  groups.py  organizations.py  projects.py  storage.py  users.py
backend/switchkey/views/: auth.py  environments.py  groups.py  management.py  organizations.py  projects.py  storage.py  users.py
backend/switchkeys/: apps.py
backend/switchkeys/admin/: admin.py
backend/switchkeys/api/: custom_response.py  permissions.py
backend/switchkeys/migrations/: 0001_initial.py  0002_alter_projectenvironment_options_and_more.py  0003_alter_projectenvironment_options_and_more.py  0004_rename_enabled_by_default_environmentfeature_is_enabled_and_more.py  0005_alter_environmentfeature_unique_together.py  0006_alter_environmentfeature_unique_together_and_more.py  0007_switchkeysfeature_and_more.py  0008_alter_projectenvironmentuser_options_and_more.py
backend/switchkeys/models/: __init__.py  abstracts.py  (+3 more)
backend/views/: home.py
clients/py/: LICENSE  README.md  config.ini  example.py  pyproject.toml
(+225 files in other folders)
